--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   email_auth: ^2.0.0
   provider: ^6.1.5
   shared_preferences: ^2.5.3
+  flutter_tts: ^4.2.2
+  video_player: ^2.9.5
+  cached_network_image: ^3.4.1
+  gif_view: ^1.0.2
 
 dev_dependencies:
   flutter_test:
